# aioaefm

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release.yml
aioeafm/: __init__.py
scripts/: test.sh
tests/: conftest.py  test_aioeafm.py
tests/fixtures/: get_station_1491TH.json  get_stations.json
