[tool.poetry]
name = "aioeafm"
version = "0.1.0"
description = "An asyncio wrapper for the UK Environment Agency Flood Monitoring API"
authors = ["John Carr <john.carr@unrouted.co.uk>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
